header alignment fix

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,6 +1,4 @@
 .navBar {
-    width: 80vw;
-    margin-left: 10%;
     background-color: white;
     box-shadow: none;
     color: #5048E5;
